CSS change to prevent opp infobox from becoming too wide. Also refactors entrypoint and store configuration

--- a/resources/assets/sass/helpers/_infobox.scss
+++ b/resources/assets/sass/helpers/_infobox.scss
@@ -38,7 +38,7 @@
 .opportunities {
 
     .infobox {
-        max-width:50%;
+        max-width:33.33%;
         min-width:33.33%;
     }
 }
